# streamcontentsystemtest

./: .gitignore  Cargo.toml  INSTALL.md  OpenLyrics2ToJSON.py  README.md  convert.py
client/: env.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
client/src/: App.vue
client/src/api/: api.ts  config.ts  content.ts  text.ts
client/src/assets/: base.scss  loading.scss  main.scss  ubuntu-font.scss
client/src/components/: AppMain.vue  EditorComponent.vue  EditorList.vue  EditorSplit.vue  ModalDialog.vue  MultitextEditorComponent.vue  MultitextEditorList.vue  MultitextEditorSplit.vue  PreviewIFrame.vue  ScratchpadEditor.vue  ServiceItemContentList.vue  ServiceItemList.vue  ServiceSongList.vue  ServiceVerseList.vue  SongList.vue  SongWordsMain.vue  TitleDescriptionEditor.vue
client/src/components/renderers/: BasicTextRenderer.vue  MainTextRenderer.vue  PreviewIFrame.vue  RootRenderer.vue  SmallTextRenderer.vue  SongRenderer.vue  SongTitleRenderer.vue  SubTextRenderer.vue
client/src/components/songs/: SongEditor.vue  SongEditorModal.vue  SongList.vue
client/src/components/ui/: ServiceItemContentList.vue  ServiceItemList.vue  TitleDescriptionEditor.vue
client/src/components/utility/: ModalDialog.vue
client/src/helpers/: clone.ts  random.ts  sleep.ts  sort.ts
client/src/router/: index.ts
client/src/stores/: config.ts  instanceId.ts  service.ts  song.ts  state.ts
client/src/views/: AboutView.vue  HomeView.vue  RenderView.vue
src/: app.rs  main.rs
src/api/: mod.rs  server_info.rs  shutdown.rs
src/client_options/: api.rs
src/config/: file.rs
src/content/: api.rs
src/helpers/: errors.rs
src/state/: api.rs  models.rs  service.rs
src/text/: api.rs
