[package]
name = "garnetdg_streamcontentsystemtest"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
crossterm = { version = "0.27" }
futures = { version = "0.3" }
ratatui = { version = "0.27" }
reqwest = { version = "0.12", features = ["gzip", "brotli", "zstd", "deflate", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.39", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7" }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
webbrowser = { version = "1.0" }
uuid = { version = "1.10", features = ["v4", "fast-rng", "serde"] }

[profile.release]
codegen-units = 1
lto = "fat"
