[package]
name = "garnetdg_streamcontentsystemtest"
version = "3.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5" }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.28" }
futures = { version = "0.3" }
r2d2 = { version = "0.8" }
r2d2_sqlite = { version = "0.25" }
rand = { version = "0.8" }
ratatui = { version = "0.28" }
reqwest = { version = "0.12", default-features = false, features = ["http2", "charset", "gzip", "brotli", "zstd", "deflate", "json", "stream", "cookies", "multipart", "rustls-tls", "rustls-tls-native-roots"] }
rusqlite = { version = "0.32", features = ["bundled", "functions", "backup", "vtab", "array", "csvtab", "i128_blob", "serialize", "chrono", "serde_json", "uuid"] }
sanitize-filename = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7" }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
webbrowser = { version = "1.0" }
uuid = { version = "1.10", features = ["v4", "fast-rng", "serde"] }

[profile.release]
codegen-units = 1
lto = "fat"
